objects/vlocity_cmt__VlocityCard__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Author__c</fullName>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CardType__c</fullName>
        <description>Card record type classic/flex</description>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>flex</fullName>
                    <label>Flex</label>
                </value>
                <value>
                    <fullName>classic</fullName>
                    <label>Classic</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Datasource__c</fullName>
        <label>Datasource</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Definition__c</fullName>
        <label>Definition</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsChildCard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Child Card?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentID__c</fullName>
        <externalId>true</externalId>
        <label>Parent ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SampleData__c</fullName>
        <label>Sample Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Styles__c</fullName>
        <label>Styles</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Type__c</fullName>
        <description>Card types such as Static, JSON and SObject.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SObject</fullName>
                </value>
                <value>
                    <fullName>JSON</fullName>
                </value>
                <value>
                    <fullName>Static</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Version__c</fullName>
        <label>Version</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vlocity Card</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__Author__c</columns>
        <columns>vlocity_cmt__Version__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>vlocity_cmt__Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vlocity_cmt__CardType__c</field>
            <operation>equals</operation>
            <value>flex</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>